# AutoCompletionFramework

./: .gitignore  :q  Cargo.toml  kanji_meanings
benches/: my_benchmark.rs
src/: bin.rs  fast_str_diff.rs  lib.rs  sort_vec.rs
src/index/: mod.rs  output.rs  str_item.rs
src/index/basic/: builder.rs  mod.rs
src/index/japanese/: builder.rs  item.rs  mod.rs
src/index/ngram/: builder.rs  item.rs  mod.rs
src/index/ngram_ext/: builder.rs  iter.rs  mod.rs
src/relevance/: item.rs  mod.rs
src/suggest/: mod.rs  query.rs  task.rs
src/suggest/extension/: custom.rs  kanji_align.rs  longest_prefix.rs  mod.rs  ngram.rs  similar_terms.rs
