[package]
name = "autocompletion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rayon = "1.5.3"
serde = { version = "1.0.137", features = ["derive"] }
qp-trie = { git = "https://github.com/sdleffler/qp-trie-rs", features = [
  "serde",
] }
strsim = "0.10.0"
priority_container = "0.1.1"
jpeudex = { git = "https://github.com/JojiiOfficial/jpeudex" }
#jpeudex = { path = "../jpeudex" }
order_struct = { git = "https://github.com/JojiiOfficial/OrderStruct" }
eudex = { git = "https://github.com/WeDontPanic/eudex" }
vector_space_model2 = { path = "../VectorSpaceModel" }

[dev-dependencies]
criterion = "0.3.5"

[[bin]]
name = "testbin"
path = "src/bin.rs"

[[bench]]
name = "my_benchmark"
harness = false
